@@ -116,3 +116,4 @@
  * Add support for SSL and bindable address (CASSANDRA-15030)
  * Autogenerate API docs for sidecar (CASSANDRA-15028)
  * C* Management process (CASSANDRA-14395)
+ * Adding support for CDC APIs into sidecar client (CASSSIDECAR-172)
